--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+			@media screen and (max-width: 768px) {
+				#intro h1 {
+					font-size: 60px; /* Adjust the size as needed */
+					line-height: 2.2; /* Adjust line spacing */
+				}
+			}
+			
+		</style>
 	</head>
 	<body class="is-preload">
 
