--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<style>
-			@media screen and (max-width: 768px) {
+			@media only screen and (max-width: 600px) and (min-width: 400px) {
 				#intro h1 {
 					font-size: 40px; /* Adjust the size as needed */
 					line-height: 2.2; /* Adjust line spacing */
 				}
 			}
-			
 		</style>
 	</head>
 	<body class="is-preload">
