--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<style>
 			@media only screen and (max-width: 600px) and (min-width: 400px) {
 				#intro h1 {
-					font-size: 27px; /* Adjust the size as needed */
-					line-height: 1.5; /* Adjust line spacing */
+					font-size: 24px; /* Adjust the size as needed */
+					/*line-height: 1.5;  Adjust line spacing */
 				}
 			}
 		</style>
