Updateh index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<style>
 			@media only screen and (max-width: 600px) and (min-width: 400px) {
 				#intro h1 {
-					font-size: 24px; /* Adjust the size as needed */
+					font-size: 1.6rem; /* Adjust the size as needed */
 					/*line-height: 1.5;  Adjust line spacing */
 				}
 			}
