--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								</article>
 								<article>
 									<header>
-										<h2>Dried Fishes Asa</h2>
+										<h2>Dried Asa Fish </h2>
 									</header>
 									<a href="#" class="image fit order-button"><img src="images/Dried fishes asa.jpeg" alt="" /></a>
 									<ul class="actions special">
@@ -97,7 +97,7 @@
 								</article>
 								<article>
 									<header>
-										<h2>Dried Fishes Mangala</h2>
+										<h2>Dried Mangala Fish </h2>
 									</header>
 									<a href="#" class="image fit order-button"><img src="images/Dried fishes mangala.jpeg" alt="" /></a>
 									<ul class="actions special">
