--- a/page2.html
+++ b/page2.html
@@ -38,7 +38,7 @@
                 <section class="posts">
                     <article>
                         <header>
-                            <h2>Dried Fishes Okpo</h2>
+                            <h2>Dried Okpo Fish </h2>
                         </header>
                         <a href="#" class="image fit order-button"><img src="images/Dried fishes okpo.jpeg" alt="" /></a>
                         <ul class="actions special">
